# powerline-shell-cpp

./: .gitmodules  .plcolors.toml  CMakeLists.txt  README.md  parser.cpp  powerline-zsh.cpp  powerline-zsh.hpp  powerline.cpp  powerline.hpp
